--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@testing-library/user-event": "^7.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "uuid": "^8.1.0"
   },
   "scripts": {
