--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "snarkdown": "^2.0.0",
     "uuid": "^8.1.0"
   },
   "scripts": {
