--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
