--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "snarkdown": "^2.0.0",
