--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ public/logo192.png
 public/logo512.png
 src/components/irrelevant
 src/pics/Clarkson2.jpg
+src/pics/clarkson3.jpg
+src/pics/clarkson5.jpg
+
 git 
 desktop.ini
 
