--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dompurify": "^2.2.7",
     "dotenv": "^8.2.0",
@@ -20,6 +21,7 @@
     "marked": "^1.2.9",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemon": "^2.0.7",
@@ -28,9 +30,12 @@
     "passport-local": "^1.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "snarkdown": "^2.0.0",
     "uuid": "^8.3.2"
   },
