--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dompurify": "^2.2.7",
     "dotenv": "^8.2.0",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "jsdom": "^16.5.2",
@@ -24,6 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "node-mailjet": "^3.3.4",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
