--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-db_URI = mongodb+srv://PrinceDaclospen:Chickensoup123@cluster0-0wvyc.gcp.mongodb.net/CBGC? 
+db_URI = mongodb+srv://PrinceDaclospen:Chickensoup123@cluster0-0wvyc.gcp.mongodb.net/CBGC?ssl=true
