--- a/client/package.json
+++ b/client/package.json
@@ -34,10 +34,6 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "node-mailjet": "^3.3.4",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-file-reader": "^1.1.4",
@@ -46,8 +42,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
